<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_icon"
                android:layout_width="200dp"
                android:layout_height="277dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/text_title_name"
                app:layout_constraintTop_toBottomOf="@+id/image_icon" />

            <TextView
                android:id="@+id/text_title_name"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/name_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_icon"
                tools:text="Name" />

            <TextView
                android:id="@+id/text_value_name"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_name"
                app:layout_constraintTop_toBottomOf="@+id/text_title_name"
                tools:text="Ragnaros the Firelord" />

            <TextView
                android:id="@+id/text_title_effect"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/flavor_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_value_name" />

            <TextView
                android:id="@+id/text_value_effect"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_effect"
                app:layout_constraintTop_toBottomOf="@+id/text_title_effect"
                tools:text="Ragnaros the Firelord" />

            <TextView
                android:id="@+id/text_title_set"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/set_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_value_effect" />

            <TextView
                android:id="@+id/text_value_set"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_set"
                app:layout_constraintTop_toBottomOf="@+id/text_title_set"
                tools:text="Qualquer coisa" />

            <TextView
                android:id="@+id/text_title_rarity"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/rarity_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_value_set" />

            <TextView
                android:id="@+id/text_value_rarity"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_rarity"
                app:layout_constraintTop_toBottomOf="@+id/text_title_rarity"
                tools:text="Qualquer coisa" />

            <TextView
                android:id="@+id/text_title_attack"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/attack_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_value_rarity" />

            <TextView
                android:id="@+id/text_value_attack"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_attack"
                app:layout_constraintTop_toBottomOf="@+id/text_title_attack"
                tools:text="Qualquer coisa" />

            <TextView
                android:id="@+id/text_title_description"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/description_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_value_attack" />

            <TextView
                android:id="@+id/text_value_description"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_description"
                app:layout_constraintTop_toBottomOf="@+id/text_title_description"
                tools:text="Qualquer coisa" />

            <TextView
                android:id="@+id/text_title_type"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/type_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_value_description" />

            <TextView
                android:id="@+id/text_value_type"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_type"
                app:layout_constraintTop_toBottomOf="@+id/text_title_type"
                tools:text="Qualquer coisa" />

            <TextView
                android:id="@+id/text_title_faction"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/faction_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_value_type" />

            <TextView
                android:id="@+id/text_value_faction"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_faction"
                app:layout_constraintTop_toBottomOf="@+id/text_title_faction"
                tools:text="Qualquer coisa" />

            <TextView
                android:id="@+id/text_title_cost"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/cost_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_value_faction" />

            <TextView
                android:id="@+id/text_value_cost"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_cost"
                app:layout_constraintTop_toBottomOf="@+id/text_title_cost"
                tools:text="Qualquer coisa" />

            <TextView
                android:id="@+id/text_title_health"
                style="@style/Hearthstone.title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/health_details_hearthstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_value_cost" />

            <TextView
                android:id="@+id/text_value_health"
                style="@style/Hearthstone.sub_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_title_health"
                app:layout_constraintTop_toBottomOf="@+id/text_title_health"
                tools:text="Qualquer coisa" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>